UC3,8 ne bijhorende aanpassingen